change style for title

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: blueviolet;
+    color: rgb(10, 10, 10);
 }
 body{
-    background-color: antiquewhite;
+    background-color: rgb(155, 120, 74);
 }
